Fix spacing on signin page

--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -13,3 +13,7 @@ body {
 #signUpBtn {
   width:30%;
 }
+
+.container {
+  margin-bottom: 20px;
+}
